--- a/android/build.gradle
+++ b/android/build.gradle
@@ -119,10 +119,12 @@ repositories {
   }
 }
 
+def support_version = getExtOrDefault('supportLibVersion')
 def kotlin_version = getExtOrDefault('kotlinVersion')
 
 dependencies {
   //noinspection GradleDynamicVersion
   api 'com.facebook.react:react-native:+'
   implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
+  implementation 'androidx.appcompat:appcompat:1.0.0'
 }
